--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
 }
 
 body {
+  @apply font-mono;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -33,6 +34,19 @@ body {
   }
 
   .socket-btn {
-    @apply font-mono font-bold flex w-full justify-center border-b border-gray-300 bg-gradient-to-b from-zinc-200 pb-6 pt-8 backdrop-blur-2xl dark:border-neutral-800 dark:bg-zinc-800/30 dark:from-inherit lg:static lg:w-auto  lg:rounded-xl lg:border lg:bg-gray-200 lg:p-4 lg:dark:bg-zinc-800/30;
+    @apply font-mono font-bold flex w-full justify-center border-b border-gray-300;
   }
+
+  .socket-btn-lg {
+    @apply pb-6 pt-6 backdrop-blur-2xl dark:border-neutral-800 dark:bg-zinc-800/30 dark:from-inherit lg:static lg:w-auto  lg:rounded-xl lg:border lg:bg-gray-200 lg:px-6 lg:py-4 lg:dark:bg-zinc-800/30;
+  }
+
+  .socket-btn-md {
+    @apply px-12 py-4 backdrop-blur-2xl dark:border-neutral-800 dark:bg-zinc-800/30 dark:from-inherit lg:static lg:w-auto  lg:rounded-md lg:border lg:bg-gray-200 lg:px-4 lg:py-2 lg:dark:bg-zinc-800/30;
+  }
+
+  .bg-dark {
+    --tw-bg-opacity: 1;
+    background-color: rgb(17 25 40/var(--tw-bg-opacity));
+}
 }
